add src and include

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,6 @@ project(Monopoly)
 
 set(CMAKE_CXX_STANDARD 11)
 
-add_executable(Monopoly main.cpp)
+add_executable(Monopoly main.cpp
+        src/ScoreBoard.cpp
+        include/ScoreBoard.h)
