--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,6 @@ set(CMAKE_CXX_STANDARD 11)
 
 add_executable(Monopoly main.cpp
         src/ScoreBoard.cpp
-        include/ScoreBoard.h)
+        include/ScoreBoard.h
+        include/BackAccount.cpp
+        include/BackAccount.h)
