--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,8 @@ project(Monopoly)
 set(CMAKE_CXX_STANDARD 11)
 
 add_executable(Monopoly main.cpp
+        src/ScoreBoard.cpp
+        include/ScoreBoard.h
 
 )
 
