--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,15 +4,12 @@ project(Monopoly)
 set(CMAKE_CXX_STANDARD 11)
 
 add_executable(Monopoly main.cpp
-        src/ScoreBoard.cpp
+        src/Board.cpp
         src/Box.cpp
         include/Box.h
-        src/AngularBox.cpp
-        include/AngularBox.h
-        src/LateralBox.cpp
-        include/LateralBox.h
-        include/ScoreBoard.h
+        include/Board.h
         include/RealPlayer.h
         include/Player.h
         include/ComputerPlayer.h
-        include/BankAccount.h)
+        include/BankAccount.h
+        src/BankAccount.cpp)
