major changes on Player code

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,16 +3,13 @@ project(Monopoly)
 
 set(CMAKE_CXX_STANDARD 11)
 
-add_executable(Monopoly main.cpp
-        src/ScoreBoard.cpp
+add_executable(Monopoly
+        main.cpp
+        src/Board.cpp
+        include/Board.h
         src/Box.cpp
         include/Box.h
-        src/AngularBox.cpp
-        include/AngularBox.h
-        src/LateralBox.cpp
-        include/LateralBox.h
-        include/ScoreBoard.h
-        include/RealPlayer.h
+        src/Player.cpp
         include/Player.h
-        include/ComputerPlayer.h
-        include/BankAccount.h)
+        src/BankAccount.cpp
+        include/BankAccount.h )
